adding docs to README; adding images to profiling results; renaming default profiling results; improving make commands; improving swagger docs
